pre-finish fix